--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
     <!-- Novo local das imagens -->
     <div style="position: absolute; top: 66%; left: 55%; transform: translateY(-50%);" class="integrante">
       <div class="image-container">
-          <img src="../src/images/arnaldo01.PNG" alt="Arnaldo" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
+          <img src="images/arnaldo01.PNG" alt="Arnaldo" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
           <div class="overlay">
               <div class="text">Arnaldo</div>
           </div>
       </div>
       <div class="image-container">
-          <img src="../src/images/gabriel01.JPG" alt="Gabriel" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
+          <img src="images/gabriel01.JPG" alt="Gabriel" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
           <div class="overlay">
               <div class="text">Gabriel</div>
           </div>
       </div>
       <div class="image-container">
-          <img src="../src/images/will01.PNG" alt="Will" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
+          <img src="images/will01.PNG" alt="Will" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
           <div class="overlay">
               <div class="text">Will</div>
           </div>
       </div>
       <div class="image-container">
-          <img src="../src/images/ricardo01.PNG" alt="Ricardo" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
+          <img src="images/ricardo01.PNG" alt="Ricardo" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
           <div class="overlay">
               <div class="text">Ricardo</div>
           </div>
@@ -76,18 +76,18 @@
           <div class="carousel-inner">
             <div class="item active">
               <a href="caminho_da_outra_pagina.html">
-                <img src="../src/images/IMG_0913.jpg" alt="Los Angeles" style="width:100%;">
+                <img src="images/IMG_0913.jpg" alt="Los Angeles" style="width:100%;">
                 <button style="position: absolute; top: 90%; left: 50%; transform: translate(-50%, -50%); padding: 10px 50px; background-color: #cdd2d6; color: black; border: none; border-radius: 5px; cursor: pointer;"><strong>Confira</strong></button>
             </a>            
             </div>
       
             <div class="item">
-              <img src="../src/images/ton ton jazz foto.jpg" alt="Chicago" style="width:100%;">
+              <img src="images/ton ton jazz foto.jpg" alt="Chicago" style="width:100%;">
               <button style="position: absolute; top: 90%; left: 50%; transform: translate(-50%, -50%); padding: 10px 50px; background-color: #cdd2d6; color: black; border: none; border-radius: 5px; cursor: pointer;"><strong>Confira</strong></button>
             </div>
           
             <div class="item">
-              <img src="../src/images/camisas01.png" alt="New york" style="width:100%;">
+              <img src="images/camisas01.png" alt="New york" style="width:100%;">
               <button style="position: absolute; top: 90%; left: 50%; transform: translate(-50%, -50%); padding: 10px 50px; background-color: #cdd2d6; color: black; border: none; border-radius: 5px; cursor: pointer;"><strong>Confira</strong></button>
             </div>
           </div>
@@ -107,10 +107,10 @@
 
   <footer>
     <div class="social-media">
-        <a href="https://wa.me/5511987115293" target="_blank"><img src="../src/images/iconwhatsapp.png" alt="WhatsApp"></a>
-        <a href="https://www.instagram.com/banda_mrnoow/" target="_blank"><img src="../src/images/icon instagram.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com/seufacebook" target="_blank"><img src="../src/images/icon facebook.png" alt="Facebook"></a>
-        <a href="https://www.tiktok.com/@seutiktok" target="_blank"><img src="../src/images/icon tiktok.png" alt="TikTok"></a>
+        <a href="https://wa.me/5511987115293" target="_blank"><img src="images/iconwhatsapp.png" alt="WhatsApp"></a>
+        <a href="https://www.instagram.com/banda_mrnoow/" target="_blank"><img src="images/icon instagram.png" alt="Instagram"></a>
+        <a href="https://www.facebook.com/seufacebook" target="_blank"><img src="images/icon facebook.png" alt="Facebook"></a>
+        <a href="https://www.tiktok.com/@seutiktok" target="_blank"><img src="images/icon tiktok.png" alt="TikTok"></a>
     </div>
 </footer>
 
