--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Novo local das imagens -->
     <div style="position: absolute; top: 66%; left: 55%; transform: translateY(-50%);" class="integrante">
       <div class="image-container">
-          <img src="images/arnaldo01.PNG" alt="Arnaldo" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
+          <img src="mrnoowsite/images/arnaldo01.PNG" alt="Arnaldo" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
           <div class="overlay">
               <div class="text">Arnaldo</div>
           </div>
