--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
     <ul class="nav-menu">
-        <li class="logo"><a href="index.html"><img src="../src/images/logo_escrito-removebg-preview.png" alt="Logo"></a></li>
+        <li class="logo"><a href="index.html"><img src="images/logo_escrito-removebg-preview.jpeg" alt="Logo"></a></li>
         <li><a href="contact.html">Contato</a></li>
         <li><a href="shows.html">Shows</a></li>
         <li><a href="store.html">Loja</a></li>
@@ -42,7 +42,7 @@
           </div>
       </div>
       <div class="image-container">
-          <img src="images/gabriel01.JPG" alt="Gabriel" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
+          <img src="images/gabriel01.JPEG" alt="Gabriel" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
           <div class="overlay">
               <div class="text">Gabriel</div>
           </div>
