--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
     <ul class="nav-menu">
-        <li class="logo"><a href="index.html"><img src="images/logo_escrito-removebg-preview.jpeg" alt="Logo"></a></li>
+        <li class="logo"><a href="index.html"><img src="images/logo_escrito-removebg-preview.png" alt="Logo"></a></li>
         <li><a href="contact.html">Contato</a></li>
         <li><a href="shows.html">Shows</a></li>
         <li><a href="store.html">Loja</a></li>
@@ -36,13 +36,13 @@
     <!-- Novo local das imagens -->
     <div style="position: absolute; top: 66%; left: 55%; transform: translateY(-50%);" class="integrante">
       <div class="image-container">
-          <img src="mrnoowsite/images/arnaldo01.PNG" alt="Arnaldo" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
+          <img src="images/arnaldo01.PNG" alt="Arnaldo" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
           <div class="overlay">
               <div class="text">Arnaldo</div>
           </div>
       </div>
       <div class="image-container">
-          <img src="images/gabriel01.JPEG" alt="Gabriel" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
+          <img src="images/gabriel01.jpg" alt="Gabriel" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
           <div class="overlay">
               <div class="text">Gabriel</div>
           </div>
@@ -76,7 +76,7 @@
           <div class="carousel-inner">
             <div class="item active">
               <a href="caminho_da_outra_pagina.html">
-                <img src="images/IMG_0913.jpg" alt="Los Angeles" style="width:100%;">
+                <img src="images/IMG_0913.JPG" alt="Los Angeles" style="width:100%;">
                 <button style="position: absolute; top: 90%; left: 50%; transform: translate(-50%, -50%); padding: 10px 50px; background-color: #cdd2d6; color: black; border: none; border-radius: 5px; cursor: pointer;"><strong>Confira</strong></button>
             </a>            
             </div>
