--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +12,7 @@
 <body>
   <nav>
     <ul class="nav-menu">
-        <li class="logo"><a href="index.html"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\logo_escrito-removebg-preview.png" alt="Logo"></a></li>
+        <li class="logo"><a href="index.html"><img src="images/logo_escrito-removebg-preview.png" alt="Logo"></a></li>
         <li><a href="contact.html">Contato</a></li>
         <li><a href="shows.html">Shows</a></li>
         <li><a href="store.html">Loja</a></li>
@@ -38,111 +37,12 @@
 
     <footer style="background-color: #353546; padding: 20px;">
         <div class="social-media">
-            <a href="https://wa.me/5511987115293" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\iconwhatsapp.png" alt="WhatsApp"></a>
-            <a href="https://www.instagram.com/banda_mrnoow/" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon instagram.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/seufacebook" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon facebook.png" alt="Facebook"></a>
-            <a href="https://www.tiktok.com/@seutiktok" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon tiktok.png" alt="TikTok"></a>
+            <a href="https://wa.me/5511987115293" target="_blank"><img src="images/iconwhatsapp.png" alt="WhatsApp"></a>
+        <a href="https://www.instagram.com/banda_mrnoow/" target="_blank"><img src="images/icon instagram.png" alt="Instagram"></a>
+        <a href="https://www.facebook.com/seufacebook" target="_blank"><img src="images/icon facebook.png" alt="Facebook"></a>
+        <a href="https://www.tiktok.com/@seutiktok" target="_blank"><img src="images/icon tiktok.png" alt="TikTok"></a>
         </div>
     </footer>
 
-</body>
-=======
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr. Noow - Banda de Rock</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-  <nav>
-    <ul class="nav-menu">
-        <li class="logo"><a href="index.html"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\logo_escrito-removebg-preview.png" alt="Logo"></a></li>
-        <li><a href="contact.html">Contato</a></li>
-        <li><a href="shows.html">Shows</a></li>
-        <li><a href="store.html">Loja</a></li>
-    </ul>
-  </nav>
-
-  <header id="home" style="position: relative;">
-    <div class="container" style="background-color: rgb(53, 53, 70); color: rgb(255, 255, 255); padding: 10px; width: 500px; height: 450px; margin: 20px auto;">
-        <div class="contact-form" style="position: absolute; top: 40%; left: 50%; transform: translate(-50%, -50%);">
-            <h2 style="font-family: 'Iron Maiden'; font-size: 24px;">Entre em Contato</h2>
-            <form action="enviar_contato.php" method="post">
-                <input type="text" name="nome" placeholder="Nome" required><br><br>
-                <input type="email" name="email" placeholder="Email" required><br><br>
-                <input type="text" name="cidade" placeholder="Cidade"><br><br>
-                <textarea name="mensagem" placeholder="Mensagem" required></textarea><br><br>
-                <input type="submit" value="Enviar">
-            </form>
-        </div>
-    </div>
-</header>
-
-
-    <footer style="background-color: #353546; padding: 20px;">
-        <div class="social-media">
-            <a href="https://wa.me/5511987115293" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\iconwhatsapp.png" alt="WhatsApp"></a>
-            <a href="https://www.instagram.com/banda_mrnoow/" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon instagram.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/seufacebook" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon facebook.png" alt="Facebook"></a>
-            <a href="https://www.tiktok.com/@seutiktok" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon tiktok.png" alt="TikTok"></a>
-        </div>
-    </footer>
-
-</body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr. Noow - Banda de Rock</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-  <nav>
-    <ul class="nav-menu">
-        <li class="logo"><a href="index.html"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\logo_escrito-removebg-preview.png" alt="Logo"></a></li>
-        <li><a href="contact.html">Contato</a></li>
-        <li><a href="shows.html">Shows</a></li>
-        <li><a href="store.html">Loja</a></li>
-    </ul>
-  </nav>
-
-  <header id="home" style="position: relative;">
-    <div class="container" style="background-color: rgb(53, 53, 70); color: rgb(255, 255, 255); padding: 10px; width: 500px; height: 450px; margin: 20px auto;">
-        <div class="contact-form" style="position: absolute; top: 40%; left: 50%; transform: translate(-50%, -50%);">
-            <h2 style="font-family: 'Iron Maiden'; font-size: 24px;">Entre em Contato</h2>
-            <form action="enviar_contato.php" method="post">
-                <input type="text" name="nome" placeholder="Nome" required><br><br>
-                <input type="email" name="email" placeholder="Email" required><br><br>
-                <input type="text" name="cidade" placeholder="Cidade"><br><br>
-                <textarea name="mensagem" placeholder="Mensagem" required></textarea><br><br>
-                <input type="submit" value="Enviar">
-            </form>
-        </div>
-    </div>
-</header>
-
-
-    <footer style="background-color: #353546; padding: 20px;">
-        <div class="social-media">
-            <a href="https://wa.me/5511987115293" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\iconwhatsapp.png" alt="WhatsApp"></a>
-            <a href="https://www.instagram.com/banda_mrnoow/" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon instagram.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/seufacebook" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon facebook.png" alt="Facebook"></a>
-            <a href="https://www.tiktok.com/@seutiktok" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon tiktok.png" alt="TikTok"></a>
-        </div>
-    </footer>
-
-</body>
->>>>>>> c70290a84acdbb284a191d5eb4c62cd58e29e398
->>>>>>> e1d556f0dd302c9c49ec8998bb95dc4bec4762d6
+    </body>
 </html>
