--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
       </div>
       <div class="image-container">
-          <img src="images/gabriel01.jpg" alt="Gabriel" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
+          <img src="images/gabriel01.PNG" alt="Gabriel" style="width: 220px; height: 220px; border-radius: 50%; margin: 10px;">
           <div class="overlay">
               <div class="text">Gabriel</div>
           </div>
