--- a/shows.html
+++ b/shows.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -38,7 +37,7 @@
 <body>
   <nav>
     <ul class="nav-menu">
-        <li class="logo"><a href="index.html"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\logo_escrito-removebg-preview.png" alt="Logo"></a></li>
+        <li class="logo"><a href="index.html"><img src="images/logo_escrito-removebg-preview.png" alt="Logo"></a></li>
         <li><a href="contact.html">Contato</a></li>
         <li><a href="shows.html">Shows</a></li>
         <li><a href="store.html">Loja</a></li>
@@ -66,185 +65,18 @@
           </li>
       </ul>
     </div>
-    <img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\agenda do rock.jpg" alt="Agenda do Rock" width="674px" height="422px">
+    <img src="images/agenda do rock.jpg" alt="Agenda do Rock" width="674px" height="422px">
   </div>
 
   <footer style="background-color: #333333; margin-top: 0px; padding: 26px;">
     <div class="social-media">
-        <a href="https://wa.me/5511987115293" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\iconwhatsapp.png" alt="WhatsApp"></a>
-        <a href="https://www.instagram.com/banda_mrnoow/" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon instagram.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com/seufacebook" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon facebook.png" alt="Facebook"></a>
-        <a href="https://www.tiktok.com/@seutiktok" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon tiktok.png" alt="TikTok"></a>
+        <a href="https://wa.me/5511987115293" target="_blank"><img src="images/iconwhatsapp.png" alt="WhatsApp"></a>
+        <a href="https://www.instagram.com/banda_mrnoow/" target="_blank"><img src="images/icon instagram.png" alt="Instagram"></a>
+        <a href="https://www.facebook.com/seufacebook" target="_blank"><img src="images/icon facebook.png" alt="Facebook"></a>
+        <a href="https://www.tiktok.com/@seutiktok" target="_blank"><img src="images/icon tiktok.png" alt="TikTok"></a>
     </div>
   </footer>
 
   <script src="js/script.js"></script>
 </body>
-=======
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr. Noow - Banda de Rock</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <style>
-        nav {
-            margin-bottom: 0; /* Remover a margem inferior */
-        }
-
-        .agenda-container {
-            display: flex; /* Utilizar flexbox para alinhar conteúdo horizontalmente */
-            justify-content: space-between; /* Alinhar os itens nas extremidades */
-        }
-
-        .agenda {
-            background-color: #353546;
-            height: 422px;
-            color: white;
-            padding-top: 10px;
-            padding-left: 50px;
-            font-family: Orbitron;
-            width: 50%; /* Definir largura da agenda */
-        }
-
-        .agenda img {
-            width: 50%; /* Definir largura da imagem */
-            height: auto; /* Altura automática proporcional à largura */
-        }
-    </style>
-</head>
-<body>
-  <nav>
-    <ul class="nav-menu">
-        <li class="logo"><a href="index.html"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\logo_escrito-removebg-preview.png" alt="Logo"></a></li>
-        <li><a href="contact.html">Contato</a></li>
-        <li><a href="shows.html">Shows</a></li>
-        <li><a href="store.html">Loja</a></li>
-    </ul>
-  </nav>
-
-  <div class="agenda-container" style="margin-top: -20px;">
-    <div class="agenda">
-      <h2>Agenda de Shows</h2>
-      <ul>
-          <li>
-              <h3>25 de Maio de 2024</h3>
-              <p>Local: Rock Bar</p>
-              <p>Cidade: São Paulo</p>
-          </li>
-          <li>
-              <h3>10 de Junho de 2024</h3>
-              <p>Local: Arena Music</p>
-              <p>Cidade: Rio de Janeiro</p>
-          </li>
-          <li>
-              <h3>30 de Junho de 2024</h3>
-              <p>Local: The Roxy</p>
-              <p>Cidade: Buenos Aires</p>
-          </li>
-      </ul>
-    </div>
-    <img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\agenda do rock.jpg" alt="Agenda do Rock" width="674px" height="422px">
-  </div>
-
-  <footer style="background-color: #333333; margin-top: 0px; padding: 26px;">
-    <div class="social-media">
-        <a href="https://wa.me/5511987115293" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\iconwhatsapp.png" alt="WhatsApp"></a>
-        <a href="https://www.instagram.com/banda_mrnoow/" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon instagram.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com/seufacebook" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon facebook.png" alt="Facebook"></a>
-        <a href="https://www.tiktok.com/@seutiktok" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon tiktok.png" alt="TikTok"></a>
-    </div>
-  </footer>
-
-  <script src="js/script.js"></script>
-</body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr. Noow - Banda de Rock</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <style>
-        nav {
-            margin-bottom: 0; /* Remover a margem inferior */
-        }
-
-        .agenda-container {
-            display: flex; /* Utilizar flexbox para alinhar conteúdo horizontalmente */
-            justify-content: space-between; /* Alinhar os itens nas extremidades */
-        }
-
-        .agenda {
-            background-color: #353546;
-            height: 422px;
-            color: white;
-            padding-top: 10px;
-            padding-left: 50px;
-            font-family: Orbitron;
-            width: 50%; /* Definir largura da agenda */
-        }
-
-        .agenda img {
-            width: 50%; /* Definir largura da imagem */
-            height: auto; /* Altura automática proporcional à largura */
-        }
-    </style>
-</head>
-<body>
-  <nav>
-    <ul class="nav-menu">
-        <li class="logo"><a href="index.html"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\logo_escrito-removebg-preview.png" alt="Logo"></a></li>
-        <li><a href="contact.html">Contato</a></li>
-        <li><a href="shows.html">Shows</a></li>
-        <li><a href="store.html">Loja</a></li>
-    </ul>
-  </nav>
-
-  <div class="agenda-container" style="margin-top: -20px;">
-    <div class="agenda">
-      <h2>Agenda de Shows</h2>
-      <ul>
-          <li>
-              <h3>25 de Maio de 2024</h3>
-              <p>Local: Rock Bar</p>
-              <p>Cidade: São Paulo</p>
-          </li>
-          <li>
-              <h3>10 de Junho de 2024</h3>
-              <p>Local: Arena Music</p>
-              <p>Cidade: Rio de Janeiro</p>
-          </li>
-          <li>
-              <h3>30 de Junho de 2024</h3>
-              <p>Local: The Roxy</p>
-              <p>Cidade: Buenos Aires</p>
-          </li>
-      </ul>
-    </div>
-    <img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\agenda do rock.jpg" alt="Agenda do Rock" width="674px" height="422px">
-  </div>
-
-  <footer style="background-color: #333333; margin-top: 0px; padding: 26px;">
-    <div class="social-media">
-        <a href="https://wa.me/5511987115293" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\iconwhatsapp.png" alt="WhatsApp"></a>
-        <a href="https://www.instagram.com/banda_mrnoow/" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon instagram.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com/seufacebook" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon facebook.png" alt="Facebook"></a>
-        <a href="https://www.tiktok.com/@seutiktok" target="_blank"><img src="C:\Users\usuario\OneDrive\Área de Trabalho\Gabriel\Bandas\Mr. Noow\icon tiktok.png" alt="TikTok"></a>
-    </div>
-  </footer>
-
-  <script src="js/script.js"></script>
-</body>
->>>>>>> c70290a84acdbb284a191d5eb4c62cd58e29e398
->>>>>>> e1d556f0dd302c9c49ec8998bb95dc4bec4762d6
 </html>
