--- a/contact.html
+++ b/contact.html
@@ -20,17 +20,19 @@
   </nav>
 
   <header id="home" style="position: relative;">
-    <div class="container" style="background-color: rgb(53, 53, 70); color: rgb(255, 255, 255); padding: 10px; width: 500px; height: 450px; margin: 20px auto;">
-        <div class="contact-form" style="position: absolute; top: 40%; left: 50%; transform: translate(-50%, -50%);">
-            <h2 style="font-family: 'Iron Maiden'; font-size: 24px;">Entre em Contato</h2>
-            <form action="enviar_contato.php" method="post">
-                <input type="text" name="nome" placeholder="Nome" required><br><br>
-                <input type="email" name="email" placeholder="Email" required><br><br>
-                <input type="text" name="cidade" placeholder="Cidade"><br><br>
-                <textarea name="mensagem" placeholder="Mensagem" required></textarea><br><br>
-                <input type="submit" value="Enviar">
-            </form>
-        </div>
+    <div class="container" margin-top="20px" style="background-color: rgb(53, 53, 70); color: rgb(255, 255, 255); padding: 20px; margin-left: 30px; width: 500px; height: 500px;">
+        <h2>Quem somos?</h2>
+        <p>
+          A banda, composta por Arnaldo nos vocais, é profundamente influenciada pelo hard rock, evidenciando seu alcance vocal excepcional, especialmente em falsetes, e sua marcante presença de palco.
+            <br><br>
+            Nas guitarras, Gabriel, inspirado por uma ampla gama de estilos que incluem classic rock, anos 80, metal, post-punk e rock progressivo, impressiona com seus riffs cativantes e solos melódicos.
+            <br><br>
+            Will, cujas influências transitam entre o glam rock e o hard rock, destaca-se como o membro mais extravagante da banda, obcecado por timbres e pela potência sonora de seus amplificadores, os quais reverberam intensamente com o público.
+            <br><br>
+            Por fim, Ricardo, influenciado pelo classic rock, MPB e anos 80, contribui com sua técnica refinada e habilidade em envolver a plateia, convidando todos a se juntarem à música. 
+            <br><br>
+            Com uma trajetória sólida, a banda acumula experiências de palco em diversos locais de São Paulo.
+        </p>
     </div>
 </header>
 
