--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
 
     <!-- Mover as imagens para a parte superior esquerda -->
     <header id="home">
-        <div class="container" margin-top="20px" style="background-color: rgb(53, 53, 70); color: rgb(255, 255, 255); padding: 20px; margin-left: 30px; width: 500px; height: 450px;">
-            <h2>História da Banda</h2>
+        <div class="container" margin-top="20px" style="background-color: rgb(53, 53, 70); color: rgb(255, 255, 255); padding: 20px; margin-left: 30px; width: 500px; height: 500px;">
+            <h2>Quem somos?</h2>
             <p>
-                Em uma pequena cidade do interior, um grupo de amigos apaixonados por música decidiu se unir e formar uma banda. Assim nasceu a Mr. Noow. Com influências que vão desde os clássicos do rock dos anos 70 até as tendências mais modernas, a banda rapidamente ganhou destaque local.
+              A banda, composta por Arnaldo nos vocais, é profundamente influenciada pelo hard rock, evidenciando seu alcance vocal excepcional, especialmente em falsetes, e sua marcante presença de palco.
                 <br><br>
-                Com o passar do tempo, os integrantes da Mr. Noow se dedicaram intensamente à sua paixão pela música, ensaiando incansavelmente e se apresentando em diversos locais. Suas performances energéticas e cativantes conquistaram o coração do público e os levaram a tocar em grandes festivais e eventos.
+                Nas guitarras, Gabriel, inspirado por uma ampla gama de estilos que incluem classic rock, anos 80, metal, post-punk e rock progressivo, impressiona com seus riffs cativantes e solos melódicos.
                 <br><br>
-                A jornada da banda tem sido repleta de altos e baixos, mas sua determinação e amor pela música os mantêm firmes em seu caminho. Com músicas originais que misturam letras profundas com riffs poderosos, a Mr. Noow continua a cativar e inspirar seus fãs ao redor do mundo.
+                Will, cujas influências transitam entre o glam rock e o hard rock, destaca-se como o membro mais extravagante da banda, obcecado por timbres e pela potência sonora de seus amplificadores, os quais reverberam intensamente com o público.
+                <br><br>
+                Por fim, Ricardo, influenciado pelo classic rock, MPB e anos 80, contribui com sua técnica refinada e habilidade em envolver a plateia, convidando todos a se juntarem à música. 
+                <br><br>
+                Com uma trajetória sólida, a banda acumula experiências de palco em diversos locais de São Paulo.
             </p>
         </div>
     </header>
